force-app/main/default/objects/Opportunity/fields/After_X_months_Text_EN__c.field-meta.xml
<CustomField>
    <fullName>After_X_months_Text_EN__c</fullName>
    <formula>&quot;after &quot; + TEXT(Holding_Period_Length__c) + &quot;  months after registration.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>After X months Text EN</label>
    <type>Text</type>
</CustomField>