force-app/main/default/objects/Opportunity/fields/Billing_address__c.field-meta.xml
<CustomField>
    <fullName>Billing_address__c</fullName>
    <formula>Account.BillingStreet + &quot;, &quot; + Account.BillingCity + &quot;, &quot; + Account.BillingState + &quot;, &quot; +  Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing address</label>
    <type>Text</type>
</CustomField>