force-app/main/default/objects/Opportunity/fields/Cars_Count_and_Price_Text_EN__c.field-meta.xml
<CustomField>
    <fullName>Cars_Count_and_Price_Text_EN__c</fullName>
    <formula>TEXT(Number_Of_Vehicles__c) + &quot; cars at a total price of &quot; +   Amount_with_Currency_SYSTEM__c</formula>
    <label>Cars Count and Price Text EN</label>
    <type>Text</type>
</CustomField>