force-app/main/default/objects/Opportunity/fields/Current_scrive_user_full_name__c.field-meta.xml
<CustomField>
    <fullName>Current_scrive_user_full_name__c</fullName>
    <formula>LastModifiedBy.FirstName + &quot; &quot; + LastModifiedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current scrive user full name</label>
    <type>Text</type>
</CustomField>