force-app/main/default/objects/Opportunity/fields/Delivery_Confirmation_Comment__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Confirmation_Comment__c</fullName>
    <description>line displayed in Delivery Confirmation after number of vehicles and total price</description>
    <inlineHelpText>line displayed in Delivery Confirmation after number of vehicles and total price</inlineHelpText>
    <label>Delivery Confirmation Comment</label>
    <length>90</length>
    <type>Text</type>
</CustomField>