force-app/main/default/objects/Opportunity/fields/Holding_Period_Length__c.field-meta.xml
<CustomField>
    <fullName>Holding_Period_Length__c</fullName>
    <description>Aggregated from vehicles as MAX(Holding Period).
How many months we will keep vehicles before they will be ready for the buyer.</description>
    <inlineHelpText>Aggregated from vehicles as MAX(Holding Period).
How many months we will keep vehicles before they will be ready for the buyer.</inlineHelpText>
    <label>Holding Period Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>