force-app/main/default/objects/Opportunity/fields/Max_KM__c.field-meta.xml
<CustomField>
    <fullName>Max_KM__c</fullName>
    <description>maximal number of km that every vehicle can drive before could be sold</description>
    <inlineHelpText>maximal number of km that every vehicle can drive before could be sold</inlineHelpText>
    <label>Max. KM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>