force-app/main/default/objects/Opportunity/fields/Min_KM__c.field-meta.xml
<CustomField>
    <fullName>Min_KM__c</fullName>
    <description>minimal number of km that every vehicle need to drive before could be sold</description>
    <inlineHelpText>minimal number of km that every vehicle need to drive before could be sold</inlineHelpText>
    <label>Min. KM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>