force-app/main/default/objects/Opportunity/fields/Offer_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Expiration_Date__c</fullName>
    <description>date when current offer expire and we need to send the offer to different buyer</description>
    <inlineHelpText>date when current offer expire and we need to send the offer to different buyer</inlineHelpText>
    <label>Offer Expiration Date</label>
    <type>Date</type>
</CustomField>