force-app/main/default/objects/Opportunity/fields/Original_Batch__c.field-meta.xml
<CustomField>
    <fullName>Original_Batch__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Batch that the opportunity was initially created</description>
    <inlineHelpText>Batch that the opportunity was initially created</inlineHelpText>
    <label>Original Batch</label>
    <referenceTo>vehicleBatch__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>