force-app/main/default/objects/Opportunity/fields/Pickup_Location__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Where the vehicles could be picked up by the buyer</description>
    <inlineHelpText>Where the vehicles could be picked up by the buyer</inlineHelpText>
    <label>Pickup Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pickup Location</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>