force-app/main/default/objects/Opportunity/fields/Pickup_location_for_scrive__c.field-meta.xml
<CustomField>
    <fullName>Pickup_location_for_scrive__c</fullName>
    <formula>Pickup_Location__r.MailingStreet + &quot; , &quot; + Pickup_Location__r.MailingPostalCode + &quot; , &quot; + Pickup_Location__r.MailingCity + &quot; ,&quot; + Pickup_Location__r.MailingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pickup location for scrive$</label>
    <type>Text</type>
</CustomField>