force-app/main/default/objects/Opportunity/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <description>Date when we expect vehicles from the opportunity to be registered</description>
    <inlineHelpText>Date when we expect vehicles from the opportunity to be registered</inlineHelpText>
    <label>Opportunity Registration Date</label>
    <type>Date</type>
</CustomField>