force-app/main/default/objects/Opportunity/fields/Registration_Date_for_Scrive__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date_for_Scrive__c</fullName>
    <formula>CASE(MONTH(Registration_Date__c),
1, &quot;January &quot;,
2, &quot;February &quot;,
3, &quot;March &quot;, 
4, &quot;April &quot;, 
5, &quot;May &quot;, 
6, &quot;June &quot;,
7, &quot;July &quot;,
8, &quot;August &quot;,
9, &quot;September &quot;,
10, &quot;October &quot;,
11, &quot;November &quot;,
12, &quot;December &quot;,
&quot;None&quot;)
+ TEXT(YEAR(Registration_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Date for Scrive</label>
    <type>Text</type>
</CustomField>