force-app/main/default/objects/Opportunity/fields/todays_date__c.field-meta.xml
<CustomField>
    <fullName>todays_date__c</fullName>
    <formula>TEXT(DAY(TODAY()))+&quot;/&quot; +TEXT(MONTH(TODAY()))+&quot;-&quot; +TEXT(YEAR(TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>todays date</label>
    <type>Text</type>
</CustomField>