force-app/main/default/objects/Opportunity/fields/Total_Remarketing_Price_EUR__c.field-meta.xml
<CustomField>
    <fullName>Total_Remarketing_Price_EUR__c</fullName>
    <description>sum of Confirmed Remarketing Price (EUR) from opportunity vehicles</description>
    <inlineHelpText>sum of Confirmed Remarketing Price (EUR) from opportunity vehicles</inlineHelpText>
    <label>Total Remarketing Price (EUR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>