force-app/main/default/objects/Opportunity/fields/Total_Remarketing_Price_Full_Tax_DKK__c.field-meta.xml
<CustomField>
    <fullName>Total_Remarketing_Price_Full_Tax_DKK__c</fullName>
    <description>sum of Confirmed Remarketing Price Full Tax (DKK) from opportunity vehicles</description>
    <inlineHelpText>sum of Confirmed Remarketing Price Full Tax (DKK) from opportunity vehicles</inlineHelpText>
    <label>Total Remarketing Price Full Tax (DKK)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>