force-app/main/default/objects/Opportunity/fields/VAT_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>VAT_NUMBER__c</fullName>
    <formula>Account.vatNumberCompany__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT number</label>
    <type>Text</type>
</CustomField>